@@ -1,3 +1,11 @@
+2005-02-27  Daniel Henninger  <jadestorm@nc.rr.com>
+
+	* AUTHORS:
+	Added Chris.
+
+	* src/tlib/oscar.py:
+	Added Chris Carlin's threading patch.
+
 2005-02-23  Daniel Henninger  <jadestorm@nc.rr.com>
 
 	* src/legacy/glue.py:
